# crawling-data-from-amazon-and-wayfair

./: .gitignore  pyproject.toml
src/crawl/: data.py  fetch.py  interact_page.py  log.py
